Additional fixes & polish.
 - Fixed border styling on crit hit & fail dice result boxes.
 - Fixed subclass add button not being interactable in edit mode.
 - Fixed too much padding at the base of the compendium browser when in select mode.
 - Fixed spurious bullet points in subtitles on spell item sheets.
 - Increased the max-height of item sheet on 1080p displays.
 - Fixed character sheet failing to render if containing un-paired subclasses.
 - Fixed error thrown when attempting to drag an advancement row.
 - Fixed unidentified description not being visible to GM users on item sheets unless the item was unidentified.
 - Fixed consuming item quantities.
 - Simplified deterministic terms in damage labels.
 - Fixed item labels not being correctly cleared when items were re-prepared.
 - [#3890] Fixed in-sheet item descriptions not respecting identified state.

--- a/less/v2/compendium-browser.less
+++ b/less/v2/compendium-browser.less
@@ -29,6 +29,11 @@
     .results { grid-area: results; }
     .footer { grid-area: footer; }
 
+    > .header {
+      position: absolute;
+      top: 0;
+    }
+
     h2 {
       color: var(--color-text-dark-primary);
       text-shadow: none;
